# data-warehouse

./: .gitignore  .pre-commit-config.yaml  README.md  project.toml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
analytics/tableau/: README.md
artifacts/: README.md  artifacts_readme.md
artifacts/bronze/: README.md
artifacts/bronze/20260115_174457_#c2ccea56/data/: metadata.yaml  run_log.txt
artifacts/bronze/20260115_174457_#c2ccea56/reports/: elt_report.html
artifacts/bronze/20260116_193224_#cbeb4cf8/data/: metadata.yaml  run_log.txt
artifacts/bronze/20260116_193224_#cbeb4cf8/reports/: elt_report.html
artifacts/bronze/20260116_231554_#3a8151e4/data/: metadata.yaml  run_log.txt
artifacts/bronze/20260116_231554_#3a8151e4/reports/: elt_report.html
artifacts/bronze/20260117_101143_#72d1650f/data/: metadata.yaml  run_log.txt
artifacts/bronze/20260117_101143_#72d1650f/reports/: elt_report.html
artifacts/bronze/20260117_101544_#66b94a88/data/: metadata.yaml  run_log.txt
artifacts/bronze/20260117_101544_#66b94a88/reports/: elt_report.html
artifacts/bronze/_state/: last_ingested.yaml
artifacts/gold/: README.md
artifacts/reports/20260116_193224_#cbeb4cf8/: summary_report.json  summary_report.md
artifacts/reports/20260116_231554_#3a8151e4/: summary_report.json  summary_report.md
artifacts/reports/20260117_101143_#72d1650f/: summary_report.json  summary_report.md
artifacts/reports/20260117_101544_#66b94a88/: summary_report.json  summary_report.md
artifacts/reports/20260117_172429_#7a02852b/: summary_report.json  summary_report.md
artifacts/silver/: README.md
configs/: .env.example
docs/: lineage_overview.md  metadata_dictionary.md  standards.md
docs/adr/: 0000-adr-index.md  0001-record-architecture-decisions.md  0002-medallion-architecture-bronze-silver-gold.md  0003-run-id-and-artifact-layout.md  0004-orchestrator-as-single-entry-point.md  0005-incremental-ingestion-and-state-management.md  0006-agentic-codegen-draft-vs-builder.md  0007-llm-security-and-secrets-management.md  0008-data-quality-and-observability.md  0009-testing-strategy-for-generated-runners.md  0010-artifacts-versioning-policy.md  0011-code-architecture-and-operations-evaluation.md  0012-code-quality-and-maintainability-evaluation.md  0013-code-security-governance-and-compliance-evaluation.md  0014-code-quality-orchestrator-evaluation.md  0015-code-quality-agent-run-evaluation.md  README.md  template.md
docs/prompts/: README.md  create_tests.txt
ml/ingestion/: README.md
scripts/: setup_repo_structure.py
src/: README.md  elt_runner.py
src/agents/: README.md  __init__.py  code_architecture_and_operations.py  code_quality_agents.py  code_quality_and_maintainability.py  code_quality_orchestrator.py  code_security_governance_compliance.py  llm_utils.py  load_2_report_agent.py  load_2_silver_layer_builder_agent.py  load_2_silver_layer_draft_agent.py  load_3_gold_layer_builder_agent.py  load_3_gold_layer_draft_agent.py  types.py
src/runs/: load_1_bronze_layer.py  load_2_silver_layer.py  load_3_gold_layer.py  load_summary_report.py  orchestrator.py  start_run.py
src/templates/: load_2_silver_layer_template.py  load_3_gold_layer_template.py
src/utils/: atomic_io.py  run_id.py  secrets.py
tests/: README.md  conftest.py
tests/contracts/: test_bronze_contracts.py  test_gold_contracts.py  test_silver_contracts.py
tests/e2e/: test_e2e_happy_path.py  test_e2e_rerun_bronze_idempotency.py
tests/helpers/: assertions.py  io.py
tests/unit/: test_bronze_unit.py  test_gold_unit.py  test_silver_unit.py
tmp/: README.md
tmp/prompt_analysis/: README.md
(+164 files in other folders)
