[build-system]
requires = ["setuptools>=67.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mysql-data-warehouse"
version = "0.1.0"
description = "Data Warehouse project with Python ELT, pandas ETL, PyTorch ML, and analytics artifacts"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Konstantin", email = "your.email@example.com" }
]
requires-python = ">=3.10"

# Core dependencies for current Python ELT + analytics pipeline
dependencies = [
  "pandas>=2.0.3",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0",
  "Jinja2>=3.0",

  # ML (optional but included for segmentation/clustering)
  "torch>=2.1.0",
  "torchvision>=0.15.2",
  "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
# Development and testing
dev = [
  "black>=24.3.0",
  "flake8>=6.1.0",
  "pytest>=7.4.2",
  "pytest-mock>=3.15.1",
]

# Analytics / Tableau output (optional and installable separately)
analytics = [
  "tableauhyperapi>=0.0.8422.0",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
exclude = """
/(
  \.venv
 | build
 | dist
 | migrations
 | artifacts
)/
"""

[tool.flake8]
max-line-length = 88
extend-ignore = [
  "E203",
  "W503"
]
exclude = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
  "artifacts"
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --tb=short"
testpaths = [
  "tests"
]
